--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Whatsapp Web clone by Piyush Sati" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicons/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicons/site.webmanifest" />
+    <meta name="description" content="Hal Resolver" />
+    
+    <link rel="icon" href="logo.ico" type="image/x-icon">
+    <!-- <link rel="manifest" href="...src/logo.png" /> -->
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!--
@@ -38,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Whatsapp Web Clone</title>
+    <title>Resolver</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
